; ModuleID = '/home/carl/AnghaBench/AppImageKit/src/extr_binreloc.c_dJyi14798182285183_br_find_data_dir.c'
source_filename = "/home/carl/AnghaBench/AppImageKit/src/extr_binreloc.c_dJyi14798182285183_br_find_data_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"share\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @br_find_data_dir(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %6 = call i8* @br_find_prefix(i8* null)
  store i8* %6, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load i8*, i8** %3, align 8
  %14 = call i8* @strdup(i8* %13)
  store i8* %14, i8** %2, align 8
  br label %22

15:                                               ; preds = %9
  store i8* null, i8** %2, align 8
  br label %22

16:                                               ; preds = %1
  %17 = load i8*, i8** %4, align 8
  %18 = call i8* @br_build_path(i8* %17, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i8* %18, i8** %5, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @free(i8* %19)
  %21 = load i8*, i8** %5, align 8
  store i8* %21, i8** %2, align 8
  br label %22

22:                                               ; preds = %16, %15, %12
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local i8* @br_find_prefix(i8*) #1

declare dso_local i8* @strdup(i8*) #1

declare dso_local i8* @br_build_path(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
